roles/openshift_minio/templates/minio-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        args:
        - server
        - /storage
        - --config-dir=/config
        - --console-address=:8080
        ports:
        - containerPort: 9000
        - containerPort: 8080
        volumeMounts:
        - name: storage
          mountPath: /storage
        - name: config
          mountPath: /config
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio-storage
      - name: config
        persistentVolumeClaim:
          claimName: minio-config
