roles/openshift_minio/templates/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
  - name: console
    port: 8080
  - name: api
    port: 9000
  selector:
    app: minio
