roles/openshift_minio/templates/minio-console-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: minio
